--- a/idea/checker/checks.component.html
+++ b/idea/checker/checks.component.html
@@ -1,8 +1,8 @@
-<ion-header no-border>
+<ion-header class="ion-no-border">
   <ion-toolbar class="ideaToolbar">
     <ion-buttons slot="start">
       <ion-button [title]="t.instant('IDEA.CHECKER.CLOSE_WITHOUT_SELECTING')" (click)="cancel()">
-        <ion-icon slot="icon-only" name="ios-arrow-down"></ion-icon>
+        <ion-icon slot="icon-only" name="chevron-down"></ion-icon>
       </ion-button>
     </ion-buttons>
     <ion-searchbar
