--- a/idea/customFields/customFieldManager.component.html
+++ b/idea/customFields/customFieldManager.component.html
@@ -1,4 +1,4 @@
-<ion-header no-border>
+<ion-header class="ion-no-border">
   <ion-toolbar class="ideaToolbar">
     <ion-title>
       {{ 'IDEA.CUSTOM_FIELDS.MANAGE_FIELD' | translate }}
