--- a/idea/offline/offlineManager.component.html
+++ b/idea/offline/offlineManager.component.html
@@ -111,7 +111,7 @@
       <ion-icon
         slot="end"
         size="small"
-        name="hand"
+        name="stop-circle"
         color="dark"
         *ngIf="r.synchronizing && offline.requiresManualConfirmation"
       ></ion-icon>
