--- a/idea/checker/checker.component.html
+++ b/idea/checker/checker.component.html
@@ -13,7 +13,7 @@
   </ion-label>
   <ion-icon
     slot="end"
-    name="md-arrow-dropdown"
+    name="caret-down"
     class="selectIcon"
     *ngIf="!disabled"
     [class.selectable]="!disabled"
