--- a/idea/checker/checker.component.scss
+++ b/idea/checker/checker.component.scss
@@ -5,7 +5,8 @@
   }
   .selectIcon {
     margin: 0;
-    font-size: 1.2rem;
+    padding-left: 4px;
+    font-size: 0.8em;
     color: var(--ion-color-medium);
   }
   .selectIcon.withLabel {
