--- a/idea/mde/mde.component.html
+++ b/idea/mde/mde.component.html
@@ -1,4 +1,4 @@
-<ion-header no-border>
+<ion-header class="ion-no-border">
   <ion-toolbar class="ideaToolbar">
     <ion-buttons slot="start">
       <ion-button [title]="t.instant('IDEA.MDE.CLOSE_WITHOUT_SAVING')" (click)="close()">
