--- a/idea/select/select.component.html
+++ b/idea/select/select.component.html
@@ -17,7 +17,7 @@
   </ion-label>
   <ion-icon
     slot="end"
-    name="md-arrow-dropdown"
+    name="caret-down"
     class="selectIcon"
     *ngIf="!disabled"
     [class.selectable]="!disabled"
