--- a/idea/select/select.component.scss
+++ b/idea/select/select.component.scss
@@ -8,7 +8,8 @@
   }
   .selectIcon {
     margin: 0;
-    font-size: 1.2rem;
+    padding-left: 4px;
+    font-size: 0.8em;
     color: var(--ion-color-medium);
   }
   .selectIcon.withLabel {
