--- a/idea/signature/signature.component.html
+++ b/idea/signature/signature.component.html
@@ -1,4 +1,4 @@
-<ion-header no-border>
+<ion-header class="ion-no-border">
   <ion-toolbar class="ideaToolbar">
     <ion-buttons slot="start">
       <ion-button [title]="t.instant('IDEA.SIGNATURE.CANCEL')" (click)="close()">
@@ -10,7 +10,7 @@
     </ion-title>
     <ion-buttons slot="end">
       <ion-button [title]="t.instant('IDEA.SIGNATURE.CLEAR_SIGNATURE')" (click)="undo()">
-        <ion-icon name="undo" slot="icon-only"></ion-icon>
+        <ion-icon name="arrow-undo" slot="icon-only"></ion-icon>
       </ion-button>
       <ion-button [title]="t.instant('IDEA.SIGNATURE.SAVE_SIGNATURE')" (click)="save()">
         <ion-icon name="checkmark" slot="icon-only"></ion-icon>
@@ -21,7 +21,9 @@
 <ion-content>
   <ion-list class="signatureList">
     <ion-list-header>
-      {{ 'IDEA.SIGNATURE.SIGNATORY' | translate }}
+      <ion-label>
+        {{ 'IDEA.SIGNATURE.SIGNATORY' | translate }}
+      </ion-label>
     </ion-list-header>
     <ion-item lines="inset" [class.fieldHasError]="signatoryError">
       <ion-input
@@ -32,7 +34,9 @@
   </ion-list>
   <ion-list class="signatureList">
     <ion-list-header>
-      {{ 'IDEA.SIGNATURE.SIGNATURE_EXPLANATION' | translate }}
+      <ion-label>
+        {{ 'IDEA.SIGNATURE.SIGNATURE_EXPLANATION' | translate }}
+      </ion-label>
     </ion-list-header>
     <div class="canvasContainer" [class.fieldHasError]="signatureError">
       <canvas id="signatureCanvas"></canvas>
