--- a/idea/attachments/attachments.component.html
+++ b/idea/attachments/attachments.component.html
@@ -5,7 +5,7 @@
   *ngFor="let att of attachments; let index = index"
 >
   <ion-button fill="clear" size="small" slot="start" *ngIf="att.attachmentId" (click)="openAttachment(att)">
-    <ion-icon name="open" slot="icon-only" size="small"></ion-icon>
+    <ion-icon name="open-outline" slot="icon-only" size="small"></ion-icon>
   </ion-button>
   <ion-icon
     slot="start"
