--- a/idea/agenda/appointment.component.html
+++ b/idea/agenda/appointment.component.html
@@ -2,14 +2,17 @@
   <ion-toolbar class="ideaToolbar">
     <ion-title>
       {{
-        (appointment.appointmentId
-          ? 'IDEA.AGENDA.APPOINTMENT.EDIT_APPOINTMENT'
-          : 'IDEA.AGENDA.APPOINTMENT.NEW_APPOINTMENT'
-        ) | translate
+        (appointment.appointmentId ? 'IDEA.AGENDA.APPOINTMENT.APPOINTMENT' : 'IDEA.AGENDA.APPOINTMENT.NEW_APPOINTMENT')
+          | translate
       }}
+      <ion-text *ngIf="!userCanEdit">({{ ('IDEA.AGENDA.APPOINTMENT.READ_ONLY' | translate).toLowerCase() }})</ion-text>
     </ion-title>
     <ion-buttons slot="end">
-      <ion-button *ngIf="appointment.appointmentId" [title]="t.instant('COMMON.DELETE')" (click)="delete()">
+      <ion-button
+        *ngIf="appointment.appointmentId && userCanEdit"
+        [title]="t.instant('COMMON.DELETE')"
+        (click)="delete()"
+      >
         <ion-icon name="trash" slot="icon-only"></ion-icon>
       </ion-button>
       <ion-button [title]="t.instant('COMMON.CLOSE')" (click)="close()">
@@ -19,33 +22,51 @@
   </ion-toolbar>
 </ion-header>
 <ion-content class="ion-padding">
-  <ion-list lines="insert" class="appointment">
-    <ion-item [class.fieldHasError]="hasFieldAnError('title')">
+  <ion-list [class.viewMode]="!userCanEdit">
+    <ion-list-header *ngIf="calendar.external && appointment.linkToOrigin">
+      <ion-label></ion-label>
+      <ion-button (click)="extBrowser.openLink(appointment.linkToOrigin)">
+        {{ 'IDEA.AGENDA.APPOINTMENT.OPEN_IN' | translate }}
+        <ion-icon [name]="getServiceIcon()" slot="end"></ion-icon>
+      </ion-button>
+    </ion-list-header>
+    <ion-item
+      *ngIf="userCanSeeDetails"
+      [lines]="userCanEdit ? 'full' : 'inset'"
+      [class.fieldHasError]="hasFieldAnError('title')"
+    >
       <ion-label position="stacked">
         {{ 'IDEA.AGENDA.APPOINTMENT.TITLE' | translate }}
       </ion-label>
       <ion-input
         type="text"
         [placeholder]="t.instant('IDEA.AGENDA.APPOINTMENT.TITLE_HINT')"
+        [disabled]="!userCanEdit"
         [(ngModel)]="appointment.title"
       ></ion-input>
     </ion-item>
-    <ion-item [class.fieldHasError]="hasFieldAnError('location')">
+    <ion-item
+      *ngIf="userCanSeeDetails"
+      [lines]="userCanEdit ? 'full' : 'inset'"
+      [class.fieldHasError]="hasFieldAnError('location')"
+    >
       <ion-label position="stacked">
         {{ 'IDEA.AGENDA.APPOINTMENT.LOCATION' | translate }}
       </ion-label>
       <ion-input
         type="text"
         [placeholder]="t.instant('IDEA.AGENDA.APPOINTMENT.LOCATION_HINT')"
+        [disabled]="!userCanEdit"
         [(ngModel)]="appointment.location"
       ></ion-input>
     </ion-item>
-    <ion-item [class.fieldHasError]="hasFieldAnError('allDay')">
+    <ion-item [lines]="userCanEdit ? 'full' : 'inset'" [class.fieldHasError]="hasFieldAnError('allDay')">
       <ion-label>
         {{ 'IDEA.AGENDA.APPOINTMENT.ALL_DAY' | translate }}
       </ion-label>
       <ion-checkbox
         [title]="t.instant('IDEA.AGENDA.APPOINTMENT.ALL_DAY_HINT')"
+        [disabled]="!userCanEdit"
         [(ngModel)]="appointment.allDay"
       ></ion-checkbox>
     </ion-item>
@@ -54,6 +75,8 @@
       [placeholder]="t.instant('IDEA.AGENDA.APPOINTMENT.START_TIME_HINT')"
       [date]="appointment.startTime"
       [timePicker]="!appointment.allDay"
+      [disabled]="!userCanEdit"
+      [lines]="userCanEdit ? 'full' : 'inset'"
       [class.fieldHasError]="hasFieldAnError('startTime')"
       (select)="appointment.startTime = $event"
     ></idea-date-time>
@@ -62,33 +85,42 @@
       [placeholder]="t.instant('IDEA.AGENDA.APPOINTMENT.END_TIME_HINT')"
       [date]="appointment.endTime"
       [timePicker]="!appointment.allDay"
+      [disabled]="!userCanEdit"
+      [lines]="userCanEdit ? 'full' : 'inset'"
       [class.fieldHasError]="hasFieldAnError('endTime')"
       (select)="appointment.endTime = $event"
     ></idea-date-time>
     <idea-select
       [data]="calendarsSuggestions"
       [label]="t.instant('IDEA.AGENDA.APPOINTMENT.CALENDAR')"
-      [description]="getCalendarNameById(appointment.calendarId)"
+      [description]="calendar.name"
       [placeholder]="t.instant('IDEA.AGENDA.APPOINTMENT.CALENDAR_HINT')"
       [searchPlaceholder]="t.instant('IDEA.AGENDA.APPOINTMENT.CALENDAR_HINT')"
       [hideIdFromUI]="true"
-      [disabled]="appointment.appointmentId"
+      [avoidAutoSelection]="true"
+      [disabled]="appointment.appointmentId && !userCanEdit"
+      [lines]="userCanEdit ? 'full' : 'inset'"
       [class.fieldHasError]="hasFieldAnError('calendarId')"
-      (select)="$event ? (appointment.calendarId = $event.value) : null"
+      (select)="$event ? setCalendar($event.value) : null"
     ></idea-select>
-    <ion-item [class.fieldHasError]="hasFieldAnError('description')">
+    <ion-item
+      *ngIf="userCanSeeDetails"
+      [lines]="userCanEdit ? 'full' : 'inset'"
+      [class.fieldHasError]="hasFieldAnError('description')"
+    >
       <ion-label position="stacked">
         {{ 'IDEA.AGENDA.APPOINTMENT.DESCRIPTION' | translate }}
       </ion-label>
       <ion-textarea
         [rows]="3"
         [placeholder]="t.instant('IDEA.AGENDA.APPOINTMENT.DESCRIPTION_HINT')"
+        [disabled]="!userCanEdit"
         [(ngModel)]="appointment.description"
       ></ion-textarea>
     </ion-item>
   </ion-list>
 </ion-content>
-<ion-footer>
+<ion-footer *ngIf="userCanEdit">
   <ion-toolbar tappable class="ideaToolbar" [title]="t.instant('COMMON.SAVE')" (click)="save()">
     <ion-title class="ion-text-center">
       <ion-icon name="checkmark"></ion-icon>
