Sostituisci [button]="true" #9

--- a/idea/agenda/appointment.component.html
+++ b/idea/agenda/appointment.component.html
@@ -121,7 +121,7 @@
   </ion-list>
 </ion-content>
 <ion-footer *ngIf="userCanEdit">
-  <ion-toolbar tappable class="ideaToolbar" [title]="t.instant('COMMON.SAVE')" (click)="save()">
+  <ion-toolbar class="ideaToolbar tappable" [title]="t.instant('COMMON.SAVE')" (click)="save()">
     <ion-title class="ion-text-center">
       <ion-icon name="checkmark"></ion-icon>
     </ion-title>
