--- a/idea/list/list.component.html
+++ b/idea/list/list.component.html
@@ -37,7 +37,7 @@
   </ion-list>
 </ion-content>
 <ion-footer>
-  <ion-toolbar tappable class="ideaToolbar" [title]="t.instant('IDEA.LIST.SAVE_AND_CLOSE')" (click)="close(true)">
+  <ion-toolbar class="ideaToolbar tappable" [title]="t.instant('IDEA.LIST.SAVE_AND_CLOSE')" (click)="close(true)">
     <ion-title class="ion-text-center">
       <ion-icon name="checkmark"></ion-icon>
     </ion-title>
