--- a/idea/resourceCenter/RCPicker.component.html
+++ b/idea/resourceCenter/RCPicker.component.html
@@ -14,7 +14,9 @@
     <p>{{ r.originalName }}.{{ r.format }}</p>
     <p class="ion-text-wrap oldVersionAlert" *ngIf="resources && isResourceNewerVersionAvailable(r)">
       {{ 'IDEA.RESOURCE_CENTER.VERSION_ATTACHED_IS_OLDER' | translate }}.
-      <ion-text tappable (click)="openResource(r)">{{ 'IDEA.RESOURCE_CENTER.OPEN_OLD_VERSION' | translate }}</ion-text>
+      <ion-text class="tappable" (click)="openResource(r)">
+        {{ 'IDEA.RESOURCE_CENTER.OPEN_OLD_VERSION' | translate }}
+      </ion-text>
     </p>
   </ion-label>
   <ion-button
