--- a/idea/subscription/stripeSubscription.component.scss
+++ b/idea/subscription/stripeSubscription.component.scss
@@ -24,5 +24,9 @@ ion-list {
     color: var(--ion-color-primary);
     font-weight: bold;
     text-decoration: underline;
+    cursor: pointer;
   }
+}
+.tappable {
+  cursor: pointer;
 }
