--- a/idea/checker/checks.component.html
+++ b/idea/checker/checks.component.html
@@ -32,7 +32,7 @@
         </i>
       </ion-label>
     </ion-item>
-    <ion-item tappable class="check" *ngFor="let check of filteredChecks">
+    <ion-item class="check" *ngFor="let check of filteredChecks" [button]="true">
       <ion-checkbox slot="start" [(ngModel)]="check.checked"></ion-checkbox>
       <ion-avatar slot="start" *ngIf="showAvatars">
         <div class="circle" *ngIf="check.color" [style.background-color]="check.color"></div>
