--- a/idea/agenda/appointment.component.html
+++ b/idea/agenda/appointment.component.html
@@ -13,7 +13,7 @@
         [title]="t.instant('COMMON.DELETE')"
         (click)="delete()"
       >
-        <ion-icon name="trash" slot="icon-only"></ion-icon>
+        <ion-icon name="trash-outline" slot="icon-only"></ion-icon>
       </ion-button>
       <ion-button [title]="t.instant('COMMON.CLOSE')" (click)="close()">
         <ion-icon name="close" slot="icon-only"></ion-icon>
