--- a/idea/checker/checks.component.html
+++ b/idea/checker/checks.component.html
@@ -32,15 +32,15 @@
         </i>
       </ion-label>
     </ion-item>
-    <ion-item class="check" *ngFor="let check of filteredChecks" [button]="true">
+    <ion-item class="check" *ngFor="let check of filteredChecks">
       <ion-checkbox slot="start" [(ngModel)]="check.checked"></ion-checkbox>
       <ion-avatar slot="start" *ngIf="showAvatars">
         <div class="circle" *ngIf="check.color" [style.background-color]="check.color"></div>
         <img
-          alt="{{ fallbackAvatar }}"
           onerror="this.src === this.alt ? '' : this.src=this.alt;"
           *ngIf="!check.color"
           [src]="check.avatar"
+          [alt]="fallbackAvatar"
         />
       </ion-avatar>
       <ion-label>
