--- a/idea/agenda/agenda.component.html
+++ b/idea/agenda/agenda.component.html
@@ -66,13 +66,13 @@
     </ion-col>
     <ion-col class="ion-text-right ion-align-self-center" [size]="12" [sizeSm]="6">
       <ion-button fill="clear" color="medium" size="small" (click)="getAdjacentCalendarDate(-1)">
-        <ion-icon name="chevron-back" slot="icon-only"></ion-icon>
+        <ion-icon name="chevron-back-outline" slot="icon-only"></ion-icon>
       </ion-button>
       <ion-button fill="clear" color="medium" size="small" (click)="goToToday()">
-        <ion-icon name="home" slot="icon-only"></ion-icon>
+        <ion-icon name="today-outline" slot="icon-only"></ion-icon>
       </ion-button>
       <ion-button fill="clear" color="medium" size="small" (click)="getAdjacentCalendarDate(1)">
-        <ion-icon name="chevron-forward" slot="icon-only"></ion-icon>
+        <ion-icon name="chevron-forward-outline" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-col>
   </ion-row>
