--- a/idea/customFields/customFields.component.html
+++ b/idea/customFields/customFields.component.html
@@ -47,7 +47,7 @@
       *ngIf="showRemoveBtn"
       (click)="disabled ? null : remove.emit(fields[f])"
     >
-      <ion-icon name="trash" slot="icon-only"></ion-icon>
+      <ion-icon name="trash-outline" slot="icon-only"></ion-icon>
     </ion-button>
   </ion-item>
 </ion-reorder-group>
