--- a/idea/languagePicker/languagePicker.component.scss
+++ b/idea/languagePicker/languagePicker.component.scss
@@ -1,8 +1,5 @@
-#IDEALanguagePicker {
-  top: 25px;
-  ion-fab-button {
-    img {
-      width: 25px;
-    }
-  }
+.languagePicker img {
+  border: 1px solid transparent;
+  border-radius: 20px;
+  width: 25px;
 }
