Improved categories Select

--- a/idea/select/suggestions.component.html
+++ b/idea/select/suggestions.component.html
@@ -15,37 +15,37 @@
         <ion-icon slot="icon-only" name="backspace"></ion-icon>
       </ion-button>
     </ion-buttons>
+    <ion-row *ngIf="showCategoriesFilters">
+      <ion-col [size]="6">
+        <idea-select
+          *ngIf="activeCategories1?.size"
+          [data]="mapIntoSuggestions(activeCategories1)"
+          [icon]="'funnel'"
+          [lines]="'none'"
+          [description]="category1"
+          [noElementsFoundText]="t._('COMMON.NO_ELEMENT_FOUND')"
+          [hideIdFromUI]="true"
+          [avoidAutoSelection]="true"
+          (select)="setFilterCategoryN(1, $event.value)"
+        ></idea-select>
+      </ion-col>
+      <ion-col [size]="6">
+        <idea-select
+          *ngIf="activeCategories2?.size"
+          [data]="mapIntoSuggestions(activeCategories2)"
+          [icon]="'funnel'"
+          [lines]="'none'"
+          [description]="category2"
+          [noElementsFoundText]="t._('COMMON.NO_ELEMENT_FOUND')"
+          [hideIdFromUI]="true"
+          [avoidAutoSelection]="true"
+          (select)="setFilterCategoryN(2, $event.value)"
+        ></idea-select>
+      </ion-col>
+    </ion-row>
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <ion-row *ngIf="activeCategories1?.size || activeCategories2?.size">
-    <ion-col [size]="12" [sizeLg]="6">
-      <idea-select
-        *ngIf="activeCategories1?.size"
-        [data]="mapIntoSuggestions(activeCategories1)"
-        [icon]="'funnel'"
-        [lines]="'none'"
-        [description]="category1"
-        [noElementsFoundText]="t._('COMMON.NO_ELEMENT_FOUND')"
-        [hideIdFromUI]="true"
-        [avoidAutoSelection]="true"
-        (select)="setFilterCategoryN(1, $event.value)"
-      ></idea-select>
-    </ion-col>
-    <ion-col [size]="12" [sizeLg]="6">
-      <idea-select
-        *ngIf="activeCategories2?.size"
-        [data]="mapIntoSuggestions(activeCategories2)"
-        [icon]="'funnel'"
-        [lines]="'none'"
-        [description]="category2"
-        [noElementsFoundText]="t._('COMMON.NO_ELEMENT_FOUND')"
-        [hideIdFromUI]="true"
-        [avoidAutoSelection]="true"
-        (select)="setFilterCategoryN(2, $event.value)"
-      ></idea-select>
-    </ion-col>
-  </ion-row>
   <ion-list class="suggestionsList">
     <ion-item lines="none" *ngIf="!suggestions.length && !(allowUnlistedValues && searchbar.value)">
       <ion-label>
@@ -75,15 +75,17 @@
     >
       <ion-label>
         <p class="categories" *ngIf="suggestion.category1 || suggestion.category2">
-          <ion-text *ngIf="suggestion.category1">
-            {{ suggestion.category1 }}
-          </ion-text>
+          <ion-text
+            *ngIf="suggestion.category1"
+            [innerHTML]="suggestion.category1 | boldprefix: searchbar.value"
+          ></ion-text>
           <ion-text *ngIf="suggestion.category1 && suggestion.category2" class="categoriesDivider">
             |
           </ion-text>
-          <ion-text *ngIf="suggestion.category2">
-            {{ suggestion.category2 }}
-          </ion-text>
+          <ion-text
+            *ngIf="suggestion.category2"
+            [innerHTML]="suggestion.category2 | boldprefix: searchbar.value"
+          ></ion-text>
         </p>
         <!-- the "key" div is used for keyboard controls -->
         <div class="key" style="display: none;">
