Improved checker, datetime & suggestions

--- a/idea/checker/checker.component.html
+++ b/idea/checker/checker.component.html
@@ -1,6 +1,13 @@
-<ion-item class="checkerItem" [lines]="lines || 'full'" [title]="placeholder || null" (click)="fetchDataAndOpenModal()">
-  <ion-icon slot="start" *ngIf="icon" [name]="icon"></ion-icon>
-  <ion-label position="stacked" *ngIf="!icon && label" [class.selectable]="!disabled || tappableWhenDisabled">
+<ion-item
+  class="checkerItem"
+  [lines]="lines || 'full'"
+  [title]="placeholder || null"
+  [button]="!disabled"
+  [class.withLabel]="label"
+  (click)="fetchDataAndOpenModal()"
+>
+  <ion-icon slot="start" *ngIf="icon" [name]="icon" [color]="iconColor" (click)="doIconSelect($event)"></ion-icon>
+  <ion-label position="stacked" *ngIf="label" [class.selectable]="!disabled || tappableWhenDisabled">
     {{ label }}
     <ion-text class="obligatoryDot" *ngIf="obligatory && !disabled"></ion-text>
   </ion-label>
@@ -11,12 +18,5 @@
   >
     {{ getPreview() }}
   </ion-label>
-  <ion-icon
-    slot="end"
-    name="caret-down"
-    class="selectIcon"
-    *ngIf="!disabled"
-    [class.selectable]="!disabled"
-    [class.withLabel]="label"
-  ></ion-icon>
+  <ion-icon slot="end" name="caret-down" class="selectIcon" *ngIf="!disabled" [class.selectable]="!disabled"></ion-icon>
 </ion-item>
