--- a/idea/checker/checks.component.html
+++ b/idea/checker/checks.component.html
@@ -7,8 +7,8 @@
     </ion-buttons>
     <ion-searchbar
       [debounce]="100"
-      [placeholder]="placeholder || t._('IDEA.CHECKER.SEARCH')"
-      (ionInput)="filterChecks($event)"
+      [placeholder]="searchPlaceholder || t._('IDEA.CHECKER.SEARCH')"
+      (ionInput)="search($event.target ? $event.target.value : '')"
     ></ion-searchbar>
     <ion-buttons slot="end">
       <ion-button [title]="t._('IDEA.CHECKER.DESELECT_ALL')" (click)="checkAll(false)">
@@ -32,20 +32,22 @@
         </i>
       </ion-label>
     </ion-item>
-    <ion-item class="check" *ngFor="let check of filteredChecks">
-      <ion-checkbox slot="start" [(ngModel)]="check.checked"></ion-checkbox>
-      <ion-avatar slot="start" *ngIf="showAvatars">
-        <div class="circle" *ngIf="check.color" [style.background-color]="check.color"></div>
-        <img
-          onerror="this.src === this.alt ? '' : this.src=this.alt;"
-          *ngIf="!check.color"
-          [src]="check.avatar"
-          [alt]="fallbackAvatar"
-        />
-      </ion-avatar>
-      <ion-label>
-        {{ check.name }}
-      </ion-label>
-    </ion-item>
+    <ion-virtual-scroll [items]="filteredChecks">
+      <ion-item class="check" *virtualItem="let check">
+        <ion-checkbox slot="start" [(ngModel)]="check.checked"></ion-checkbox>
+        <ion-avatar slot="start" *ngIf="showAvatars">
+          <div class="circle" *ngIf="check.color" [style.background-color]="check.color"></div>
+          <img
+            onerror="this.src === this.alt ? '' : this.src=this.alt;"
+            *ngIf="!check.color"
+            [src]="check.avatar"
+            [alt]="fallbackAvatar"
+          />
+        </ion-avatar>
+        <ion-label>
+          {{ check.name }}
+        </ion-label>
+      </ion-item>
+    </ion-virtual-scroll>
   </ion-list>
 </ion-content>
