--- a/idea/select/select.component.scss
+++ b/idea/select/select.component.scss
@@ -1,6 +1,9 @@
 .selectItem {
+  height: 48px;
   .description {
-    min-height: 20px;
+    margin: 10px 0;
+    height: 20px;
+    line-height: 20px;
     width: 100%;
   }
   .placeholder {
@@ -12,8 +15,14 @@
     font-size: 0.8em;
     color: var(--ion-color-medium);
   }
-  .selectIcon.withLabel {
+}
+.selectItem.withLabel {
+  height: 60px;
+  .selectIcon {
     padding-top: 25px;
+  }
+  ion-icon[slot='start'] {
+    margin-top: 16px;
   }
 }
 .selectable {
