Fixed compiler warnings

--- a/idea/agenda/agenda.component.html
+++ b/idea/agenda/agenda.component.html
@@ -28,7 +28,7 @@
       <idea-checker
         class="calendarsChecks"
         [data]="calendarsChecks"
-        [placeholder]="t._('IDEA.AGENDA.CALENDARS.CALENDARS')"
+        [searchPlaceholder]="t._('IDEA.AGENDA.CALENDARS.CALENDARS')"
         [lines]="'none'"
         [allText]="t._('IDEA.AGENDA.ALL_CALENDARS')"
         [noneText]="t._('IDEA.AGENDA.NO_CALENDARS')"
