--- a/idea/agenda/calendar.component.html
+++ b/idea/agenda/calendar.component.html
@@ -57,7 +57,7 @@
       *ngIf="membershipsChecks && calendar.isShared()"
       [data]="membershipsChecks"
       [label]="t._('IDEA.AGENDA.CALENDARS.USERS_ALLOWED_TO_MANAGE_APPOINTMENTS')"
-      [placeholder]="t._('IDEA.AGENDA.CALENDARS.WHO_CAN_MANAGE_APPOINTMENTS')"
+      [searchPlaceholder]="t._('IDEA.AGENDA.CALENDARS.WHO_CAN_MANAGE_APPOINTMENTS')"
       [noneText]="t._('IDEA.AGENDA.CALENDARS.NOBODY')"
       [allText]="t._('IDEA.AGENDA.CALENDARS.EVERYONE')"
       [lines]="'inset'"
