--- a/idea/checker/checker.component.html
+++ b/idea/checker/checker.component.html
@@ -1,7 +1,7 @@
 <ion-item
   class="checkerItem"
   [lines]="lines || 'full'"
-  [title]="placeholder || null"
+  [title]="searchPlaceholder || null"
   [button]="!disabled"
   [class.withLabel]="label"
   (click)="fetchDataAndOpenModal()"
